Archive2/8b/57d5b4db4bbb93/output
main.cpp:22:36: error: allocating an object of abstract class type 'derived<int>'
    return std::unique_ptr<T>{ new T(std::forward<Args>(args)...) };
                                   ^
main.cpp:26:31: note: in instantiation of function template specialization 'make_unique<derived<int>>' requested here
    std::unique_ptr<base> x = make_unique<derived<int>>();
                              ^
main.cpp:7:17: note: unimplemented pure virtual method 'test' in 'derived'
    virtual int test(int) = 0;
                ^
1 error generated.
